2009-03-26  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: apparently sometimes someone
	adds a null handler; protect against this.

2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: don't allow event handlers
	to stop processing of further events.  Give a warning if
	behaviour would have differed before this change.  This does not
	crash the system, so I'm not sure what the crasher yesterday was:
	I wonder whether it was caused by passing a function which still
	returned bool to some function which expected it to return void
	now.  Anyway, if Kimmo was right about the causes of that bug:
	Fixes NB#105014.

2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-main-context.c: slight fixup of warnings in
	loop processing for events.

2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	The next step from the reverted patch.  Crashes still not evident.

	* matchbox/core/mb-wm-main-context.c: unify loop processing for events.

2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Step-by-step inclusion of reverted patch.

	* matchbox/core/mb-wm-main-context.c: move debugging messages into
	the same part of the function.

2009-03-25  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.23

	Revert Thomas' event handler changes, because it makes HD to crash
	easily when pressing the close button. Needs more work to fix the
	issue --- maybe some handler works only because it was not called?

	* matchbox/core/mb-wm-client-window.c: Revert Thomas' transiency
	setting because it wasn't working for stackable windows, and add a
	note for it. For stackables, the transiency is set at mapping and
	unmapping time.

2009-03-24  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Event handlers now return void and cannot stop processing
	of further events.
	Accoding to Kimmo:
	Fixes NB#105014. (Kimmo: didn't quite, see above...)
